Minor fix for texture displaying blurry in Chrome.

--- a/web/src/css/components/cm-texture-image.module.css
+++ b/web/src/css/components/cm-texture-image.module.css
@@ -6,7 +6,7 @@
 .texture-image,
 .texture-animation {
 	height: 64px;
-	image-rendering: crisp-edges;
+	image-rendering: pixelated;
 }
 
 .texture-animation {
